--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 body {
-  background: #000;
+  background: white;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 14px;
   color: #000;
@@ -14,7 +14,7 @@ body {
 }
 
 .header {
-  background-color: #000;
+  background-color: white;
   display: flex;
   justify-content: space-between;
 }
@@ -42,4 +42,11 @@ body {
 .swiper-slide img {
   display: block;
   width: 100%;
+}
+
+.label {
+  position: absolute;
+  top: 40vh;
+  left: 30px;
+  width: 200px;
 }
