--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 body {
-  background: white;
+  background: black;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 14px;
   color: #000;
